# neovim-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  metadata.rs  session.rs
